# smart_csv_converter

./: .gitignore  Cargo.toml  LICENSE  README.md  test_config.toml
example_excel/: test1.xlsx  test_notable.xlsx
src/: celladdress.rs  celladress.rs  cli.rs  config.rs  errors.rs  excel_parser.rs  main.rs  namedrange.rs  parse_with_config.rs  parse_with_manual.rs  test.rs  test_congif.toml
