[package]
name = "excel_to_csv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = {version="0.24.0", features = ["dates"]}
clap = { version = "4.4.18", features = ["derive"] }
csv = "1.3.0"
log = "0.4.20"
regex = "1.10.3"
serde = "1.0.196"
simple-logging = "2.0.2"
toml = "0.8.10"
